# server/api/openapi.yaml
@@ -17,69 +17,41 @@ paths:
                   in: query
                   schema:
                     type: integer
-                    format: int32
+                    format: int64
                 - name: size
                   in: query
                   schema:
                     type: integer
                     format: int32
+                - name: reverse
+                  in: query
+                  schema:
+                    type: boolean
             responses:
                 "200":
                     description: OK
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/ListCollectionReply'
-                default:
-                    description: Default error response
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Status'
+                                $ref: '#/components/schemas/service.wireman.ListCollectionReply'
         post:
             tags:
                 - Greeter
             description: Sends a greeting
             operationId: Greeter_CreateCollection
-            parameters:
-                - name: id
-                  in: query
-                  schema:
-                    type: integer
-                    format: int32
-                - name: name
-                  in: query
-                  schema:
-                    type: string
-                - name: logo
-                  in: query
-                  schema:
-                    type: string
-                - name: desc
-                  in: query
-                  schema:
-                    type: string
-                - name: license
-                  in: query
-                  schema:
-                    type: string
-                - name: address
-                  in: query
-                  schema:
-                    type: string
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/service.wireman.Collection'
+                required: true
             responses:
                 "200":
                     description: OK
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/CreateCollectionReply'
-                default:
-                    description: Default error response
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Status'
+                                $ref: '#/components/schemas/service.wireman.CreateCollectionReply'
     /collection/{id}:
         get:
             tags:
@@ -91,28 +63,22 @@ paths:
                   required: true
                   schema:
                     type: integer
-                    format: int32
+                    format: int64
             responses:
                 "200":
                     description: OK
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/Collection'
-                default:
-                    description: Default error response
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Status'
+                                $ref: '#/components/schemas/service.wireman.Collection'
 components:
     schemas:
-        Collection:
+        service.wireman.Collection:
             type: object
             properties:
                 id:
                     type: integer
-                    format: int32
+                    format: int64
                 name:
                     type: string
                 logo:
@@ -123,46 +89,35 @@ components:
                     type: string
                 address:
                     type: string
+                chainId:
+                    type: integer
+                    format: int64
+                symbol:
+                    type: string
+                Mtime:
+                    type: integer
+                    format: int64
             description: The request message containing the user's name.
-        CreateCollectionReply:
+        service.wireman.CreateCollectionReply:
             type: object
             properties:
                 success:
                     type: boolean
+                id:
+                    type: integer
+                    format: int64
             description: The response message containing the greetings
-        GoogleProtobufAny:
-            type: object
-            properties:
-                '@type':
-                    type: string
-                    description: The type of the serialized message.
-            additionalProperties: true
-            description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
-        ListCollectionReply:
+        service.wireman.ListCollectionReply:
             type: object
             properties:
                 collections:
                     type: array
                     items:
-                        $ref: '#/components/schemas/Collection'
+                        $ref: '#/components/schemas/service.wireman.Collection'
                 anchorId:
                     type: integer
-                    format: int32
-        Status:
-            type: object
-            properties:
-                code:
-                    type: integer
-                    description: The status code, which should be an enum value of [google.rpc.Code][google.rpc.Code].
-                    format: int32
-                message:
-                    type: string
-                    description: A developer-facing error message, which should be in English. Any user-facing error message should be localized and sent in the [google.rpc.Status.details][google.rpc.Status.details] field, or localized by the client.
-                details:
-                    type: array
-                    items:
-                        $ref: '#/components/schemas/GoogleProtobufAny'
-                    description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
-            description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
+                    format: int64
+                isEnd:
+                    type: boolean
 tags:
     - name: Greeter
